syntax = "proto3";

option csharp_namespace = "Another_Mirai_Native.gRPC";
import "google/protobuf/wrappers.proto";

package CQP_gRPC;

service CQPFunctions {
  rpc CQ_sendPrivateMsg (CQ_sendPrivateMsg_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_sendGroupMsg (CQ_sendGroupMsg_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_sendGroupQuoteMsg (CQ_sendGroupQuoteMsg_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_sendDiscussMsg (CQ_sendDiscussMsg_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_deleteMsg (CQ_deleteMsg_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_sendLikeV2 (CQ_sendLikeV2_Parameters) returns (google.protobuf.Int32Value);

  rpc CQ_getCookiesV2 (CQ_getCookiesV2_Parameters) returns (google.protobuf.StringValue);
  rpc CQ_getImage (CQ_getImage_Parameters) returns (google.protobuf.StringValue);
  rpc CQ_getRecordV2 (CQ_getRecordV2_Parameters) returns (google.protobuf.StringValue);
  rpc CQ_getCsrfToken (CQ_getCsrfToken_Parameters) returns (google.protobuf.StringValue);
  rpc CQ_getAppDirectory (CQ_getAppDirectory_Parameters) returns (google.protobuf.StringValue);
  rpc CQ_getLoginNick (CQ_getLoginNick_Parameters) returns (google.protobuf.StringValue);

  rpc CQ_getLoginQQ (CQ_getLoginQQ_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setGroupKick (CQ_setGroupKick_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setGroupBan (CQ_setGroupBan_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setGroupAdmin (CQ_setGroupAdmin_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setGroupSpecialTitle (CQ_setGroupSpecialTitle_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setGroupWholeBan (CQ_setGroupWholeBan_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setGroupAnonymousBan (CQ_setGroupAnonymousBan_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setGroupAnonymous (CQ_setGroupAnonymous_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setGroupCard (CQ_setGroupCard_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setGroupLeave (CQ_setGroupLeave_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setDiscussLeave (CQ_setDiscussLeave_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setFriendAddRequest (CQ_setFriendAddRequest_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setGroupAddRequestV2 (CQ_setGroupAddRequestV2_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_addLog (CQ_addLog_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_setFatal (CQ_setFatal_Parameters) returns (google.protobuf.Int32Value);

  rpc CQ_getGroupMemberInfoV2 (CQ_getGroupMemberInfoV2_Parameters) returns (google.protobuf.StringValue);
  rpc CQ_getGroupMemberList (CQ_getGroupMemberList_Parameters) returns (google.protobuf.StringValue);
  rpc CQ_getGroupList (CQ_getGroupList_Parameters) returns (google.protobuf.StringValue);
  rpc CQ_getStrangerInfo (CQ_getStrangerInfo_Parameters) returns (google.protobuf.StringValue);
  rpc CQ_getGroupInfo (CQ_getGroupInfo_Parameters) returns (google.protobuf.StringValue);
  rpc CQ_getFriendList (CQ_getFriendList_Parameters) returns (google.protobuf.StringValue);

  rpc CQ_canSendImage (CQ_canSendImage_Parameters) returns (google.protobuf.Int32Value);
  rpc CQ_canSendRecord (CQ_canSendRecord_Parameters) returns (google.protobuf.Int32Value);
}

message CQ_sendPrivateMsg_Parameters {
  int32 authCode = 1;
  int64 qqId = 2;
  string msg = 3;
}

message CQ_sendGroupMsg_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  string msg = 3;
}

message CQ_sendGroupQuoteMsg_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  int32 msgId = 3;
  string msg = 4;
}

message CQ_sendDiscussMsg_Parameters {
  int32 authCode = 1;
  int64 discussId = 2;
  string msg = 3;
}

message CQ_deleteMsg_Parameters {
  int32 authCode = 1;
  int64 msgId = 2;
}

message CQ_sendLikeV2_Parameters {
  int32 authCode = 1;
  int64 qqId = 2;
  int32 count = 3;
}

message CQ_getCookiesV2_Parameters {
  int32 authCode = 1;
  string domain = 2;
}

message CQ_getImage_Parameters {
  int32 authCode = 1;
  string file = 2;
}

message CQ_getRecordV2_Parameters {
  int32 authCode = 1;
  string file = 2;
  string format = 3;
}

message CQ_getCsrfToken_Parameters {
  int32 authCode = 1;
}

message CQ_getAppDirectory_Parameters {
  int32 authCode = 1;
}

message CQ_getLoginQQ_Parameters {
  int32 authCode = 1;
}

message CQ_getLoginNick_Parameters {
  int32 authCode = 1;
}

message CQ_setGroupKick_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  int64 qqId = 3;
  bool refuses = 4;
}

message CQ_setGroupBan_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  int64 qqId = 3;
  int64 time = 4;
}

message CQ_setGroupAdmin_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  int64 qqId = 3;
  bool isSet = 4;
}

message CQ_setGroupSpecialTitle_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  int64 qqId = 3;
  string title = 4;
  int64 durationTime = 5;
}

message CQ_setGroupWholeBan_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  bool isOpen = 3;
}

message CQ_setGroupAnonymousBan_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  string anonymous = 3;
  int64 banTime = 4;
}

message CQ_setGroupAnonymous_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  bool isOpen = 3;
}

message CQ_setGroupCard_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  int64 qqId = 3;
  string newCard = 4;
}

message CQ_setGroupLeave_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  bool isDisband = 3;
}

message CQ_setDiscussLeave_Parameters {
  int32 authCode = 1;
  int64 discussId = 2;
}

message CQ_setFriendAddRequest_Parameters {
  int32 authCode = 1;
  string identifying = 2;
  int32 requestType = 3;
  string appendMsg = 4;
}

message CQ_setGroupAddRequestV2_Parameters {
  int32 authCode = 1;
  string identifying = 2;
  int32 requestType = 3;
  int32 responseType = 4;
  string appendMsg = 5;
}

message CQ_addLog_Parameters {
  int32 authCode = 1;
  int32 priority = 2;
  string type = 3;
  string msg = 4;
}

message CQ_setFatal_Parameters {
  int32 authCode = 1;
  string errorMsg = 2;
}

message CQ_getGroupMemberInfoV2_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  int64 qqId = 3;
  bool isCache = 4;
}

message CQ_getGroupMemberList_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
}

message CQ_getGroupList_Parameters {
  int32 authCode = 1;
}

message CQ_getStrangerInfo_Parameters {
  int32 authCode = 1;
  int64 qqId = 2;
  bool notCache = 3;
}

message CQ_getGroupInfo_Parameters {
  int32 authCode = 1;
  int64 groupId = 2;
  bool notCache = 3;
}

message CQ_getFriendList_Parameters {
  int32 authCode = 1;
  bool reserved = 2;
}

message CQ_canSendImage_Parameters {
  int32 authCode = 1;
}

message CQ_canSendRecord_Parameters {
  int32 authCode = 1;
}